--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('images/logo.png') no-repeat center;
+            background: url('Images/Logo.png') no-repeat center;
             background-size: contain;
             opacity: 0.1;
             z-index: -1;
@@ -106,7 +106,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="Quality Logo" height="50"> Quality
+                <img src="Images/Logo.png" alt="Quality Logo" height="50"> Quality
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -139,7 +139,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/Packets1.png" class="card-img-top" alt="Dates">
+                    <img src="Images/Packets1.png" class="card-img-top" alt="Dates">
                     <div class="card-body">
                         <h5 class="card-title">Premium Dates</h5>
                         <p class="card-text">Rich in flavor and packed with nutrients.</p>
@@ -148,7 +148,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/Packets2.png" class="card-img-top" alt="Almonds">
+                    <img src="Images/Packets2.png" class="card-img-top" alt="Almonds">
                     <div class="card-body">
                         <h5 class="card-title">Almonds</h5>
                         <p class="card-text">A great source of protein and healthy fats.</p>
@@ -157,7 +157,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/Packets3.png" class="card-img-top" alt="Cashews">
+                    <img src="Images/Packets3.png" class="card-img-top" alt="Cashews">
                     <div class="card-body">
                         <h5 class="card-title">Cashews</h5>
                         <p class="card-text">Creamy and delicious, perfect for snacking.</p>
