--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         .card {
             background-color: #222;
-            /* color: gold; */
+            color: rgb(171, 151, 39);
             /* border: 2px solid gold; */
             text-align: center;
             width: 100%;
