--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: black;
-            color: rgb(113, 100, 27);
+            color: rgb(200, 180, 80); /* Brighter text */
         }
 
         .hero {
@@ -21,7 +21,7 @@
             justify-content: center;
             flex-direction: column;
             text-align: center;
-            color: rgb(113, 100, 27);
+            color: rgb(230, 210, 100);
         }
 
         .hero::before {
@@ -41,21 +41,17 @@
             background-color: black !important;
         }
 
-        .navbar-dark .navbar-nav .nav-link {
-            color: rgb(113, 100, 27) !important;
-        }
-
+        .navbar-dark .navbar-nav .nav-link,
         .navbar-dark .navbar-brand {
-            color: rgb(113, 100, 27) !important;
+            color: rgb(230, 210, 100) !important;
         }
 
         .card {
             background-color: #222;
-            color: rgb(171, 151, 39);
-            /* border: 2px solid gold; */
+            color: rgb(220, 200, 90); /* Brighter text */
             text-align: center;
             width: 100%;
-            height: 350px; /* Fixed size */
+            height: 350px;
         }
 
         .card img {
@@ -64,40 +60,37 @@
         }
 
         .btn-primary {
-            background-color: rgb(134, 123, 57);
-            /* border-color: gold; */
+            background-color: rgb(200, 180, 80);
             color: black;
         }
 
         .btn-primary:hover {
-            background-color: darkgoldenrod;
-            /* border-color: darkgoldenrod; */
+            background-color: rgb(230, 210, 100);
         }
 
         .footer {
             background: black;
-            /* color: gold; */
+            color: rgb(230, 210, 100);
             padding: 20px;
             margin-top: 20px;
         }
+
         .form-control {
-    background-color: black !important;
-    color: rgb(113, 100, 27) !important;
-    border: 1px solid rgb(134, 123, 57);
-}
+            background-color: black !important;
+            color: rgb(200, 180, 80) !important;
+            border: 1px solid rgb(230, 210, 100);
+        }
 
-.form-control::placeholder {
-    color: rgb(134, 123, 57) !important;
-    opacity: 0.7;
-}
+        .form-control::placeholder {
+            color: rgb(230, 210, 100) !important;
+        }
 
-.form-control:focus {
-    background-color: black;
-    color: rgb(113, 100, 27);
-    border-color: darkgoldenrod;
-    box-shadow: 0 0 5px darkgoldenrod;
-}
-
+        .form-control:focus {
+            background-color: black;
+            color: rgb(200, 180, 80);
+            border-color: rgb(230, 210, 100);
+            box-shadow: 0 0 5px rgb(230, 210, 100);
+        }
     </style>
 </head>
 
