--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Quality - Dates & Nuts</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="Images/Logo.png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -99,7 +99,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="Images/Logo.png" alt="Quality Logo" height="50"> Quality
+                <img src="Images/Logo.png" alt="Quality Logo" height="50"> Quality - Dates & Nuts
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -135,7 +135,7 @@
                     <img src="Images/Packets1.png" class="card-img-top" alt="Dates">
                     <div class="card-body">
                         <h5 class="card-title">Premium Dates</h5>
-                        <p class="card-text">Rich in flavor and packed with nutrients.</p>
+                        <p class="card-text">Fresh and organic dates, rich in nutrients.</p>
                     </div>
                 </div>
             </div>
@@ -144,16 +144,16 @@
                     <img src="Images/Packets2.png" class="card-img-top" alt="Almonds">
                     <div class="card-body">
                         <h5 class="card-title">Almonds</h5>
-                        <p class="card-text">A great source of protein and healthy fats.</p>
+                        <p class="card-text">Crunchy and delicious almonds, full of energy.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Images/Packets3.png" class="card-img-top" alt="Cashews">
+                    <img src="Images/Packets3.png" class="card-img-top" alt="Walnuts">
                     <div class="card-body">
-                        <h5 class="card-title">Cashews</h5>
-                        <p class="card-text">Creamy and delicious, perfect for snacking.</p>
+                        <h5 class="card-title">Walnuts</h5>
+                        <p class="card-text">High-quality walnuts, packed with omega-3.</p>
                     </div>
                 </div>
             </div>
@@ -165,8 +165,7 @@
         <div class="container">
             <h2 class="text-center">Contact Us</h2>
 
-            <!-- Success Message (Initially Hidden) -->
-            <div id="successMessage" class="alert alert-success text-center d-none" role="alert">
+            <div id="successMessage" class="alert alert-success text-center d-none">
                 ✅ Your inquiry has been forwarded to our team. We will contact you soon!
             </div>
 
@@ -197,22 +196,6 @@
 
     <script>
         document.getElementById("contactForm").addEventListener("submit", function(event) {
-            event.preventDefault(); // Prevent page reload
-
-            // Show success message
-            let successMessage = document.getElementById("successMessage");
-            successMessage.classList.remove("d-none");
-
-            // Clear form fields
-            document.getElementById("contactForm").reset();
-
-            // Hide message after 5 seconds
-            setTimeout(() => {
-                successMessage.classList.add("d-none");
-            }, 5000);
-        });
-
-        document.getElementById("contactForm").addEventListener("submit", function(event) {
             event.preventDefault();
 
             let name = document.getElementById("name").value.trim();
@@ -220,17 +203,21 @@
             let message = document.getElementById("message").value.trim();
 
             let mobilePattern = /^[6-9]\d{9}$/;
-            // if (!mobilePattern.test(mobile)) {
-            //     alert("❌ Please enter a valid 10-digit Indian mobile number.");
-            //     return;
-            // }
+            if (!mobilePattern.test(mobile)) {
+                alert("❌ Please enter a valid 10-digit Indian mobile number.");
+                return;
+            }
 
-            let whatsappNumber = "9846357146"; 
+            let successMessage = document.getElementById("successMessage");
+            successMessage.classList.remove("d-none");
+
+            document.getElementById("contactForm").reset();
+            setTimeout(() => successMessage.classList.add("d-none"), 5000);
+
+            let whatsappNumber = "9846357146";
             let whatsappMessage = `Hello! My name is ${name}. My contact number is ${mobile}. Message: "${message}"`;
-            let encodedMessage = encodeURIComponent(whatsappMessage);
 
-            let whatsappURL = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
-            window.open(whatsappURL, "_blank");
+            window.open(`https://wa.me/${whatsappNumber}?text=${encodeURIComponent(whatsappMessage)}`, "_blank");
         });
     </script>
 </body>
