--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="Images/Logo.png" alt="Quality Logo" height="50"> Quality - Dates & Nuts
+                <img src="Images/Logo.png" alt="Quality Logo" height="50"> 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
