--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <a href="#" class="container flex justify-center lg:justify-between">
                         <span class="hidden lg:block">Buy Now @ Amazon</span>
                         <span class="hidden lg:block">Buy Now @ Flipkart</span>
-                        <span>Buy Now @ Instagram</span>
+                        <span>Buy Now @ Online</span>
                     </a>
                 </div>
             <div class="flex flex-col lg:flex-row bg-[#EE6B61] text-white h-screen items-center">
