--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         <span>Buy Now @ Online</span>
                     </a>
                 </div>
-            <div class="flex flex-col lg:flex-row bg-[#EE6B61] text-white h-screen items-center">
+            <div class="flex flex-col lg:flex-row text-white h-screen items-center" style="--tw-bg-opacity:1; background-color:rgb(176 175 175)">
                 <div class="px-8 lg:px-20 lg:w-[50%] pt-24">
                     <h1 class="paytone text-[60px] leading-[60px] xl:text-[90px] xl:leading-[90px] flex flex-col">
                         <span
