--- a/index.html
+++ b/index.html
@@ -399,10 +399,8 @@
 
         <body class="max-w-screen overflow-x-hidden">
                 <div class="bg-[#292516] py-3 text-[13px] font-medium text-white">
-                    <a href="https://www.amazon.in/stores/page/EF5EAB09-65AA-4946-BE92-8A4EA25290F5" class="container flex justify-center lg:justify-between" target="_blank">
-                        <span class="hidden lg:block">Buy Now @ Amazon</span>
-                        <span class="hidden lg:block">Buy Now @ Flipkart</span>
-                        <span>Buy Now @ Online</span>
+                    <a href="#" class="container flex justify-center lg:justify-between">
+                       <span>Buy Now @ Online</span>
                     </a>
                 </div>
             <div class="flex flex-col lg:flex-row text-white h-screen items-center" style="--tw-bg-opacity:1; background-color:rgb(176 175 175)">
@@ -996,17 +994,7 @@
                     </div>
                     <div
                         class="flex flex-col lg:flex-row justify-between text-white pt-5 mt-10 border-t border-white lg:items-center">
-                        <div class="">
-                            <ul class="flex gap-4">
-                                <li>
-                                    <a href="#">Terms & Conditions</a>
-                                </li>
-                                <li>
-                                    <a href="privacy-policy/index.html">Privacy Policy</a>
-                                </li>
-                            </ul>
-                            <p class="text-xs font-light mt-4 xl:w-1/2">Disclaimer: The information provided on this website is for general informational purposes only. While we strive to ensure accuracy, completeness, and timeliness, we make no representations or warranties of any kind, express or implied, regarding the reliability or accuracy of the content. This material should not be considered as the sole basis for making decisions without consulting primary, more accurate, or more current sources of information. Any reliance you place on the content of this website is strictly at your own risk.</p>
-                        </div>
+                        
 					
                         <div class="">
                             <h4 class="paytone text-[36px]">Quality Snacks, Better Bites!!</h4>
