--- a/index.html
+++ b/index.html
@@ -604,10 +604,10 @@
                         <div class="my-4 ">
                             <h3 class="text-base font-medium leading-[26px] capitalize">Roasted Almond Dates</h3>
                             <p class="text-[14px] font-normal text-[#A5A5A5]">Perfect time-pass healthy snack</p>
-							<a href="https://www.amazon.in/Quality-Premium-Stuffed-Roasted-California/dp/B0FG4KLJT3/ref=sr_1_7?crid=M7OX9XZTNJGW&dib=eyJ2IjoiMSJ9.EptsLnI_NUlRb_ORjEaLBhsJIXr2pm4kcpuq2JpjNTyNhW-woKXNaInLX5zFsqehVTUfs-_7xE4FqyTbNe0wfyOccmq36SERZYr6-RxJjFhI8UGy3mPQGtdFrGm0JRN5M5cCJHY1IcexplIVKvBMMXm1NmXibJ5FGvHTCgmhETAMx-PJXfg3V2tl7NLhVj7ZqNhOrwF02RPBB3t3mcchyXk501uvqhFZZ9cda-4V_40sFkv6gIZskNxHkxQHtvE8bBQiE3ChRckAeoF7Y3XmJproHxuQW3_TWkPvNZfCiRE.cTgCTAQ2BQ1aUNUEes_UN4dFTb8ExcWNFRYrSD7buhA&dib_tag=se&keywords=quality%2Bdates%2Band%2Bnuts&qid=1751816824&sprefix=quality%2Bdates%2Band%2Bnuts%2Caps%2C236&sr=8-7&th=1"
+							<!-- <a href="https://www.amazon.in/Quality-Premium-Stuffed-Roasted-California/dp/B0FG4KLJT3/ref=sr_1_7?crid=M7OX9XZTNJGW&dib=eyJ2IjoiMSJ9.EptsLnI_NUlRb_ORjEaLBhsJIXr2pm4kcpuq2JpjNTyNhW-woKXNaInLX5zFsqehVTUfs-_7xE4FqyTbNe0wfyOccmq36SERZYr6-RxJjFhI8UGy3mPQGtdFrGm0JRN5M5cCJHY1IcexplIVKvBMMXm1NmXibJ5FGvHTCgmhETAMx-PJXfg3V2tl7NLhVj7ZqNhOrwF02RPBB3t3mcchyXk501uvqhFZZ9cda-4V_40sFkv6gIZskNxHkxQHtvE8bBQiE3ChRckAeoF7Y3XmJproHxuQW3_TWkPvNZfCiRE.cTgCTAQ2BQ1aUNUEes_UN4dFTb8ExcWNFRYrSD7buhA&dib_tag=se&keywords=quality%2Bdates%2Band%2Bnuts&qid=1751816824&sprefix=quality%2Bdates%2Band%2Bnuts%2Caps%2C236&sr=8-7&th=1"
 							class="text-[14px] font-medium bg-[#292516] py-2 text-white text-center rounded-full block" target="_blank">
 							Buy Now
-							</a>
+							</a> -->
                         </div>
                     </div>
                     <div class="product relative">
@@ -630,10 +630,10 @@
                         <div class="my-4 ">
                             <h3 class="text-base font-medium leading-[26px] capitalize">Roasted Salted Cashews</h3>
                             <p class="text-[14px] font-normal text-[#A5A5A5]">Crunchy Anytime Snack</p>
-                           	<a href="https://www.amazon.in/Quality-Gluten-Free-Cholesterol-Nutrients-Antioxidants/dp/B0FG81CTTD/ref=sr_1_5?crid=3L5IQ194Y8B59&dib=eyJ2IjoiMSJ9.ItNMn_Tq_cG0Om6HM1pLMAGlkL4R-jgtsyznGu22rQ7p-RYdsY5cREsIPk_FR7PK7mr7Wiib9zBAJ-2spwdI-XynsP9O7nZoenZ3uDJUSX5qxfjOBKZIk40DPj_0I7yX1g-oa2qdby8j-nPI0DH0e-2Dt5L9VJdYPPGfEYYH5-lbINRPYTDOOa1L6bbbRa69ffm35tdO91v3nK-HzkSiAYsAQoMQaDlTqlcJ5Jj1Z1gQ1udJAWCl4U9cDDTTTnvegIUt4DRT26_KzGXu2IRQCVApIXFZWy260WpoX6iC8gM.LhxouZ3tIjiA1IneKxnk3P5WT1Yy6fw-t1o2nTW0pZI&dib_tag=se&keywords=Quality%2BDATES%2B%26%2BNUTS%2BENRICH%2BYOUR%2BLIFESTYLE%2Bcashews&qid=1751816895&sprefix=quality%2Bdates%2B%26%2Bnuts%2Benrich%2Byour%2Blifestyle%2Bcashew%2Caps%2C246&sr=8-5&th=1"
+                           <!-- 	<a href="https://www.amazon.in/Quality-Gluten-Free-Cholesterol-Nutrients-Antioxidants/dp/B0FG81CTTD/ref=sr_1_5?crid=3L5IQ194Y8B59&dib=eyJ2IjoiMSJ9.ItNMn_Tq_cG0Om6HM1pLMAGlkL4R-jgtsyznGu22rQ7p-RYdsY5cREsIPk_FR7PK7mr7Wiib9zBAJ-2spwdI-XynsP9O7nZoenZ3uDJUSX5qxfjOBKZIk40DPj_0I7yX1g-oa2qdby8j-nPI0DH0e-2Dt5L9VJdYPPGfEYYH5-lbINRPYTDOOa1L6bbbRa69ffm35tdO91v3nK-HzkSiAYsAQoMQaDlTqlcJ5Jj1Z1gQ1udJAWCl4U9cDDTTTnvegIUt4DRT26_KzGXu2IRQCVApIXFZWy260WpoX6iC8gM.LhxouZ3tIjiA1IneKxnk3P5WT1Yy6fw-t1o2nTW0pZI&dib_tag=se&keywords=Quality%2BDATES%2B%26%2BNUTS%2BENRICH%2BYOUR%2BLIFESTYLE%2Bcashews&qid=1751816895&sprefix=quality%2Bdates%2B%26%2Bnuts%2Benrich%2Byour%2Blifestyle%2Bcashew%2Caps%2C246&sr=8-5&th=1"
 								class="text-[14px] font-medium bg-[#292516] py-2 text-white text-center rounded-full block" target="_blank">
 								Buy Now
-							</a>
+							</a> -->
 
                         </div>
                     </div>
@@ -657,10 +657,10 @@
                         <div class="my-4 ">
                             <h3 class="text-base font-medium leading-[26px] capitalize">Roasted Salted Almonds</h3>
                             <p class="text-[14px] font-normal text-[#A5A5A5]">The All-time Classic Snack</p>
-                            <a href="https://www.amazon.in/Quality-California-Gluten-Free-Nutritious-Freshness/dp/B0FFZNVVYL/ref=sr_1_6?crid=M7OX9XZTNJGW&dib=eyJ2IjoiMSJ9.EptsLnI_NUlRb_ORjEaLBhsJIXr2pm4kcpuq2JpjNTyNhW-woKXNaInLX5zFsqehVTUfs-_7xE4FqyTbNe0wfyOccmq36SERZYr6-RxJjFhI8UGy3mPQGtdFrGm0JRN5M5cCJHY1IcexplIVKvBMMXm1NmXibJ5FGvHTCgmhETAMx-PJXfg3V2tl7NLhVj7ZqNhOrwF02RPBB3t3mcchyXk501uvqhFZZ9cda-4V_40sFkv6gIZskNxHkxQHtvE8bBQiE3ChRckAeoF7Y3XmJproHxuQW3_TWkPvNZfCiRE.cTgCTAQ2BQ1aUNUEes_UN4dFTb8ExcWNFRYrSD7buhA&dib_tag=se&keywords=quality%2Bdates%2Band%2Bnuts&qid=1751816824&sprefix=quality%2Bdates%2Band%2Bnuts%2Caps%2C236&sr=8-6&th=1	"
+                            <!-- <a href="https://www.amazon.in/Quality-California-Gluten-Free-Nutritious-Freshness/dp/B0FFZNVVYL/ref=sr_1_6?crid=M7OX9XZTNJGW&dib=eyJ2IjoiMSJ9.EptsLnI_NUlRb_ORjEaLBhsJIXr2pm4kcpuq2JpjNTyNhW-woKXNaInLX5zFsqehVTUfs-_7xE4FqyTbNe0wfyOccmq36SERZYr6-RxJjFhI8UGy3mPQGtdFrGm0JRN5M5cCJHY1IcexplIVKvBMMXm1NmXibJ5FGvHTCgmhETAMx-PJXfg3V2tl7NLhVj7ZqNhOrwF02RPBB3t3mcchyXk501uvqhFZZ9cda-4V_40sFkv6gIZskNxHkxQHtvE8bBQiE3ChRckAeoF7Y3XmJproHxuQW3_TWkPvNZfCiRE.cTgCTAQ2BQ1aUNUEes_UN4dFTb8ExcWNFRYrSD7buhA&dib_tag=se&keywords=quality%2Bdates%2Band%2Bnuts&qid=1751816824&sprefix=quality%2Bdates%2Band%2Bnuts%2Caps%2C236&sr=8-6&th=1	"
 								class="text-[14px] font-medium bg-[#292516] py-2 text-white text-center rounded-full block" target="_blank">
 								Buy Now
-							</a>
+							</a> -->
                         </div>
                     </div>
                     <div class="product relative">
@@ -683,10 +683,10 @@
                         <div class="my-4 ">
                             <h3 class="text-base font-medium leading-[26px] capitalize">Combo pack</h3>
                             <p class="text-[14px] font-normal text-[#A5A5A5]">Tangy & Tasty, Your Anytime snack!</p>
-                            <a href="https://www.amazon.in/stores/page/EF5EAB09-65AA-4946-BE92-8A4EA25290F5" 
+                           <!--  <a href="https://www.amazon.in/stores/page/EF5EAB09-65AA-4946-BE92-8A4EA25290F5" 
 								class="text-[14px] font-medium bg-[#292516] py-2 text-white text-center rounded-full block">
 								Buy Now
-							</a>
+							</a> -->
                         </div>
                     </div>
 
